add_subdirectory(callee)
add_subdirectory(choose)
add_subdirectory(custdata)
add_subdirectory(custview)
add_subdirectory(cvt64_sample)
add_subdirectory(ex_callcnv)
add_subdirectory(ex_debidc)
add_subdirectory(ex_events1)
add_subdirectory(ex_merge_ldrdata)
add_subdirectory(extlang)
add_subdirectory(findcrypt2)
add_subdirectory(formchooser)
add_subdirectory(formsample)
add_subdirectory(funclist)
add_subdirectory(getlines)
add_subdirectory(hello)
add_subdirectory(hexview)
add_subdirectory(highlighter)
add_subdirectory(ht_output)
add_subdirectory(ht_view)

# IDAPython: Out of scope - work in progress
# add_subdirectory(idapython)
message(STATUS "IDAPython plugin: Skipped (work in progress)")

add_subdirectory(mex1)
add_subdirectory(mex2)
add_subdirectory(mex3)
add_subdirectory(mex4)
add_subdirectory(mtsample)
add_subdirectory(navcolor)
add_subdirectory(openform)

add_subdirectory(pdb)

add_subdirectory(procext)
add_subdirectory(qproject)
add_subdirectory(qwindow)
add_subdirectory(snapshots)
add_subdirectory(tracer)
add_subdirectory(tracing_api)
add_subdirectory(ugraph)
add_subdirectory(ugraph2)
add_subdirectory(ugraph3)
add_subdirectory(ui_requests)
add_subdirectory(uiswitch)
if(WIN32)
    add_subdirectory(uunp)
endif()
add_subdirectory(vcsample)
add_subdirectory(vds1)
add_subdirectory(vds2)
add_subdirectory(vds3)
add_subdirectory(vds4)
add_subdirectory(vds5)
add_subdirectory(vds6)
add_subdirectory(vds7)
add_subdirectory(vds8)
add_subdirectory(vds9)
add_subdirectory(vds10)
add_subdirectory(vds11)
add_subdirectory(vds12)
add_subdirectory(vds13)
add_subdirectory(vds14)
add_subdirectory(vds15)
add_subdirectory(vds16)
add_subdirectory(vds17)
add_subdirectory(vds18)
add_subdirectory(vds19)
add_subdirectory(vds20)
add_subdirectory(z80dbg)

# Script plugins (Python/IDC)
add_subdirectory(script_plg)
